# study-budy

./: .gitignore  README.md
bridge/: requirements.txt  serial_to_firestore.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/src/: pdfjs-dist.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/gemini/chat/: route.ts
frontend/src/app/api/gemini/flashcards/: route.ts
frontend/src/app/api/gemini/quiz/: route.ts
frontend/src/app/api/generateFlashcards/: route.ts
frontend/src/app/api/posture/: route.ts
frontend/src/app/components/: FaceHandTracker.tsx  Flashcards.tsx  GeminiChatWidget.tsx  PdfUploadModal.tsx  PostureMonitor.tsx  Quiz.tsx  SidebarSessionList.tsx  SpeechToText.tsx  Upload.tsx
frontend/src/app/session/: layout.tsx  page.tsx
frontend/src/app/session/[sessionId]/: page.tsx
frontend/src/app/utils/: pdfUtils.ts
frontend/src/lib/: firebase.ts
frontend/src/styles/: globals.css
frontend/src/types/: speech-recognition.d.ts
hardware/: .gitignore  sdkconfig
hardware/main/: CMakeLists.txt  hello_world_main.c
hardware/main/Inc/: http_server.h  mpu6050.h  private_info.h  wifi_manager.h
hardware/main/Src/: http_server.c  main.c  mpu6050.c  wifi_manager.c
web-code/frontend/: package.json
